--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- Header -->
 <header id="header-section" class="w3-container w3-red w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">Workshop Portfolio</h1>
-  <p class="w3-xlarge">by {{21keels}}</p>
+  <p class="w3-xlarge">by 21keels</p>
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top" onclick="buttonHandler()">Free Advice</button>
 </header>
 
@@ -40,7 +40,7 @@
 
     <div class="w3-twothird">
       <h1>Conditionals</h1>
-      <h5 class="w3-padding-32">{{An "and then" statement}}</h5>
+      <h5 class="w3-padding-32">An "and then" statement</h5>
 
       <p class="w3-text-grey">Conditionals can help a person or computer choose what to do when faced with a decision.  See an example I made here:</p>
       <a class="project-link" href="https://ojones.github.io/workshop-conditionals/" target="blank">
@@ -62,7 +62,7 @@
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>For Loops</h1>
-      <h5 class="w3-padding-32">{{A code to search through a lot of data}}</h5>
+      <h5 class="w3-padding-32">A code to search through a lot of data</h5>
 
       <p class="w3-text-grey">For loops can help search through lots of data.  See an example I made here: </p>
       <a class="project-link" href="https://ojones.github.io/workshop-for-loops/" target="blank">
@@ -88,7 +88,7 @@
 
     <div class="w3-twothird">
       <h1>Web Apps</h1>
-      <h5 class="w3-padding-32">Web apps written in {{html, css, javascript}}</h5>
+      <h5 class="w3-padding-32">Web apps written in html, css, javascript</h5>
 
       <p class="w3-text-grey">Web apps can be deployed to web with Github.  Just go to settings tab and set source for "Github Pages".  See an example I made here:</p>
       <a class="project-link" href="https://ojones.github.io/workshop-webapp/" target="blank">
@@ -106,7 +106,7 @@
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Algorithms</h1>
-      <h5 class="w3-padding-32">{{Step by step instructions}}</h5>
+      <h5 class="w3-padding-32">Step by step instructions</h5>
 
       <p class="w3-text-grey">Algorithms can help solve huge (or small) problems by breaking solutions down into easy steps.  See an example I made here: </p>
       <a class="code-link" href="https://github.com/ojones/workshop-algorithm/blob/master/workshop-algorithm/src/components/step.js" target="blank">
@@ -128,7 +128,7 @@
 <script>
   // Used to toggle the menu on small screens when clicking on the menu button
   function buttonHandler() {
-      alert("{{It is confusing, but don't give up}}")
+      alert("It is confusing, but don't give up")
   }
 </script>
 
