--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   i.fa {
     font-size: 64pt;
     /* you can change red to whatever color you want but leave the !important */
-    color: Blue!important;
+    color:  #000000!important;
   }
   #header-section {
     /* you can change red to whatever color you want but leave the !important */
-    background-color: Gray!important;
+    background-color:  #cc6666!important;
   }
 </style>
 <body>
