--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </header>
 
 <!-- Second Grid -->
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+<div class="w3-row-padding w3-dark-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
       <i class="fa w3-padding-64 w3-text-red w3-margin-right">if</i>
