--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   i.fa {
     font-size: 64pt;
     /* you can change red to whatever color you want but leave the !important */
-    color:  #000000!important;
+    color:  #ccccff!important;
   }
   #header-section {
     /* you can change red to whatever color you want but leave the !important */
